<resources>
    <string name="app_name">FORMULARIO</string>
    <string name="nombre">Usuario :</string>
    <string name="contraseña">Contraseña :</string>
    <string name="rcontraseña">Repita su contraseña :</string>
    <string name="correo">Correo :</string>
    <string name="sexo">Sexo :</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="nacimiento">Fecha de nacimiento  </string>
    <string name="ciudad">Ciudad de residencia :</string>
    <string name="hobies">Hobbies :</string>
    <string name="gamer">Bailar</string>
    <string name="nadar">Nadar</string>
    <string name="sing">Cantar</string>
    <string name="draw">Dibujar</string>
    <string name="aceptar">ACEPTAR</string>
</resources>
